--- a/이것이 코딩 테스트다 with Python/[이것이_코딩_테스트다_with_Python]_31강_플로이드_워셜_알고리즘.ipynb
+++ b/이것이 코딩 테스트다 with Python/[이것이_코딩_테스트다_with_Python]_31강_플로이드_워셜_알고리즘.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "[이것이 코딩 테스트다 with Python] 31강 플로이드 워셜 알고리즘.ipynb",
+      "name": "[이것이_코딩_테스트다_with_Python]_31강_플로이드_워셜_알고리즘.ipynb",
       "provenance": [],
       "collapsed_sections": []
     },
@@ -28,7 +28,7 @@
     {
       "cell_type": "code",
       "source": [
-        "INF = int(le9)\n",
+        "INF = int(1e9)\n",
         "\n",
         "n = int(input())\n",
         "m = int(input())\n",
@@ -56,22 +56,10 @@
         "    print()"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "ZGkARaKKPqR6",
-        "outputId": "714dc9a8-f99f-42df-ff17-5e736acefe12"
+        "id": "IXqCFBQ4r2kM"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "0.10788077716941784\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -79,7 +67,7 @@
         ""
       ],
       "metadata": {
-        "id": "IXqCFBQ4r2kM"
+        "id": "JYEel_XtowgB"
       },
       "execution_count": null,
       "outputs": []
