--- a/이것이 코딩 테스트다 with Python/[이것이_코딩_테스트다_with_Python]_33강_서로소_집합_자료구조.ipynb
+++ b/이것이 코딩 테스트다 with Python/[이것이_코딩_테스트다_with_Python]_33강_서로소_집합_자료구조.ipynb
@@ -80,7 +80,11 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "def find_parent(parent, x):\n",
+        "    # 루트 노드를 찾을 때 까지 재귀 호출 \n",
+        "    if parent[x] != x:\n",
+        "        parent[x] = find_parent(parent, parent[x])\n",
+        "    return parent[x]"
       ],
       "metadata": {
         "id": "PA_m1V-9brr1"
