--- a/이것이 코딩 테스트다 with Python/[이것이_코딩_테스트다_with_Python]_33강_서로소_집합_자료구조.ipynb
+++ b/이것이 코딩 테스트다 with Python/[이것이_코딩_테스트다_with_Python]_33강_서로소_집합_자료구조.ipynb
@@ -84,10 +84,48 @@
         "    # 루트 노드를 찾을 때 까지 재귀 호출 \n",
         "    if parent[x] != x:\n",
         "        parent[x] = find_parent(parent, parent[x])\n",
-        "    return parent[x]"
+        "    return parent[x]\n",
+        "\n",
+        "# 두 원소가 혹산 집합을 합치기\n",
+        "def union_parent(parent, a, b):\n",
+        "    a = find_parent(parent, a)\n",
+        "    b = find_parent(parent, b)\n",
+        "    if a < b:\n",
+        "        parent[b] = a\n",
+        "    else:\n",
+        "        parent[a] = b\n",
+        "\n",
+        "v, e = map(int, input().split())\n",
+        "parent = [0] * (v + 1)\n",
+        "\n",
+        "for i in range(1, v + 1):\n",
+        "    parent[i] = i\n",
+        "\n",
+        "for i in range(e):\n",
+        "    a, b = map(int, input().split())\n",
+        "    union_parent(parent, a, b)\n",
+        "print(parent)\n",
+        "print('각 원소가 속한 집합: ', end = '')\n",
+        "for i in range(1, v + 1):\n",
+        "    print(find_parent(parent, i), end = ' ')\n",
+        "\n",
+        "print('부모 테이블: ', end = '')\n",
+        "for i in range(1, v + 1):\n",
+        "    print(parent[i], end = ' ')"
       ],
       "metadata": {
         "id": "PA_m1V-9brr1"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "1VeshPNtezPd"
       },
       "execution_count": null,
       "outputs": []
