--- a/Level-1/두_정수_사이의_합.ipynb
+++ b/Level-1/두_정수_사이의_합.ipynb
@@ -243,7 +243,8 @@
         "\r\n",
         "a = 3\r\n",
         "b = 5\r\n",
-        "solution(a, b)"
+        "solution(a, b)\r\n",
+        "# 2점 "
       ],
       "outputs": [
         {
