--- a/Level-3/베스트앨범.ipynb
+++ b/Level-3/베스트앨범.ipynb
@@ -180,15 +180,102 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        ""
+        "다른 사람 풀이"
       ],
       "metadata": {
-        "id": "5FTHWmoN-o55"
+        "id": "M4CCGXMkQU9f"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def solution(genres, plays):\n",
+        "    answer = []\n",
+        "    dic = {}\n",
+        "    album_list = []\n",
+        "    \n",
+        "    for i in range(len(genres)):\n",
+        "        dic[genres[i]] = dic.get(genres[i], 0) + plays[i]\n",
+        "        albs = album(genres[i], plays[i], i)\n",
+        "        album_list.append(albs)\n",
+        "        print(albs[0])\n",
+        "   \n",
+        "    dic = sorted(dic.items(), key=lambda dic:dic[1], reverse=True)\n",
+        "    album_list = sorted(album_list, reverse=True)\n",
+        "\n",
+        "\n",
+        "\n",
+        "    while len(dic) > 0:\n",
+        "        play_genre = dic.pop(0)\n",
+        "        #print(play_genre)\n",
+        "        cnt = 0;\n",
+        "        for ab in album_list:\n",
+        "            if play_genre[0] == ab.genre:\n",
+        "                answer.append(ab.track)\n",
+        "                cnt += 1\n",
+        "            if cnt == 2:\n",
+        "                break\n",
+        "\n",
+        "    return answer\n",
+        "\n",
+        "class album:\n",
+        "    def __init__(self, genre, play, track):\n",
+        "        self.genre = genre\n",
+        "        self.play = play\n",
+        "        self.track = track\n",
+        "\n",
+        "    def __lt__(self, other):\n",
+        "        return self.play < other.play\n",
+        "    def __le__(self, other):\n",
+        "        return self.play <= other.play\n",
+        "    def __gt__(self, other):\n",
+        "        return self.play > other.play\n",
+        "    def __ge__(self, other):\n",
+        "        return self.play >= other.play\n",
+        "    def __eq__(self, other):\n",
+        "        return self.play == other.play\n",
+        "    def __ne__(self, other):\n",
+        "        return self.play != other.play\n",
+        "    def __getitem__(self, index):\n",
+        "        return (self.genre, self.play, self.track)\n",
+        "\n",
+        "genres = [\"classic\", \"pop\", \"classic\", \"classic\", \"pop\"]\n",
+        "plays = [500, 600, 150, 800, 2500]\n",
+        "solution(genres, plays)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5FTHWmoN-o55",
+        "outputId": "a08464c9-de27-48bc-8b6b-66f2b59d1318"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 200,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "('classic', 500, 0)\n",
+            "('pop', 600, 1)\n",
+            "('classic', 150, 2)\n",
+            "('classic', 800, 3)\n",
+            "('pop', 2500, 4)\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[4, 1, 3, 0]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 200
+        }
+      ]
     }
   ]
 }
