--- a/Level-1/직사각형 별찍기.ipynb
+++ b/Level-1/직사각형 별찍기.ipynb
@@ -3,9 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "직사각형 별찍기.ipynb",
-      "provenance": [],
-      "collapsed_sections": []
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -18,22 +16,15 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "SJTQEga_HnCJ"
-      },
       "source": [
-        "# 직사각형 별찍기"
-      ]
+        "출처 : 프로그래머스"
+      ],
+      "metadata": {
+        "id": "dqWdCl1cQ9ML"
+      }
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "aMJ6uOdqGp-J",
-        "outputId": "1c78af69-6341-4c63-845e-1cc2b6d8fb3e"
-      },
       "source": [
         "a, b = map(int, input().strip().split(' '))\n",
         "for n in range(b):\n",
@@ -41,10 +32,18 @@
         "        print('*', end='')\n",
         "    print()"
       ],
-      "execution_count": 1,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0IR1NBGtwk-M",
+        "outputId": "86a44ece-5b7f-4378-ee8a-d70610c94be5"
+      },
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "3 5\n",
             "***\n",
@@ -52,62 +51,61 @@
             "***\n",
             "***\n",
             "***\n"
-          ],
-          "name": "stdout"
+          ]
         }
       ]
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "1bhmnSk_HFj3",
-        "outputId": "162a1d27-99a1-45e9-ed9d-9f36e36fa8ed"
-      },
       "source": [
         "a, b = map(str, input().strip().split(' '))\n",
         "print(type(a))\n",
         "print(type(b))"
       ],
-      "execution_count": 3,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rGTrXhYPaR4d",
+        "outputId": "dbf3b1b9-9201-4e31-d2ac-2a8d31da8095"
+      },
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "1 2\n",
+            "3 5\n",
             "<class 'str'>\n",
             "<class 'str'>\n"
-          ],
-          "name": "stdout"
+          ]
         }
       ]
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Gy7_sIVdHMp_",
-        "outputId": "c7a11864-a8fa-4005-d1a3-c9e68f0e2479"
-      },
       "source": [
         "a, b = map(int, input().strip().split(' '))\n",
         "print(type(a))\n",
         "print(type(b))"
       ],
-      "execution_count": 4,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "KJkHPlfXa0GW",
+        "outputId": "10bd316d-ab73-4ba0-daaf-d0dd5f056223"
+      },
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "1 2\n",
+            "3 5\n",
             "<class 'int'>\n",
             "<class 'int'>\n"
-          ],
-          "name": "stdout"
+          ]
         }
       ]
     }
